<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_rl_control</name>
  <version>0.0.1</version>
  <description>RL policy node for Franka ROS 2 control</description>
  <maintainer email="lzuzhangshsh@gmail.com">Summer Zhang</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>numpy</depend>
  <depend>torch</depend>
  <depend>pathlib</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>