; 在 ROS 2 Python 包的 setup.cfg 文件中，  
; `[develop]` 和 `[install]` 部分通常**不是必需的**，除非你有特殊的脚本安装需求。

; - 这两部分的作用是指定脚本（可执行文件）安装的目录。
; - ROS 2 推荐的做法是通过 `console_scripts` 自动生成可执行入口，**不需要手动指定 `script_dir` 或 `install_scripts`**。
; - 如果你没有特殊需求，可以**安全地删除** `[develop]` 和 `[install]` 这两部分。



; [develop]
; script_dir=$base/lib/franka_rl_control
; [install]
; install_scripts=$base/lib/franka_rl_control

[metadata]
name = franka_rl_control
version = 0.0.1
description = RL policy node for Franka ROS 2 control
author = Summer Zhang
author_email = lzuzhangshsh@gmail.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    numpy
    torch
    std_msgs
    franka_msgs
    pathlib

[options.entry_points]
console_scripts =
    rl_policy_node = franka_rl_control.rl_policy_node:main