<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_sideview_cameras</name>
  <version>0.0.1</version>
  <description>Dual RealSense camera publisher</description>
  <maintainer email="summer@todo.todo">summer</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python libs -->
  <depend>numpy</depend>
  <exec_depend>pyrealsense2</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
